--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,1 +1,14 @@
-pandas==2.2.0
+google_auth_httplib2==0.2.0
+httplib2==0.22.0
+Jinja2==3.1.3
+nox==2023.4.22
+numpy==1.26.4
+oauth2client==3.0.0
+pandas==2.2.1
+parameterized==0.9.0
+protobuf==4.25.3
+pytest==8.0.2
+PyYAML==6.0.1
+setuptools==68.2.0
+uritemplate==4.1.1
+webapp2==2.5.2
